--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Sep 28 11:20:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
+
+	* docs/libvir.html: Clarified configuration required for
+	remote over ssh.
+
 Tue Sep 25 14:45:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* src/remote_internal.c: Fix handling of usernames (thanks to
