Solaris hypercall compatability fixes (Mark Johnson)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Sep 29 14:30:41 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/xen_internal.c, src/xs_internal.c: Solaris hypercall compat
+	changes. (Mark Johnson)
+
 Sat Sep 29 14:23:41 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/sexpr.h, src/sexpr.c, src/xml.c, src/xend_internal.c: Allow
