--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,14 @@ Mon Oct 15 15:31:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
 	from the public API (it was not used), and move it into the test
 	driver where it is used for purely internal purposes.
 
+Fri Oct 12 14:57:53 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/qemu.conf, src/Makefile.am: Added example config file
+	for QEMU driver
+	* qemud/libvirtd.conf, qemud/Makefile.am: Added example config
+	file for libvirt daemon
+	* libvirt.spec.in: Added libvirtd.conf & qemud.conf files
+
 Fri Oct 12 12:05:53 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/qemu_driver.c, src/qemu_conf.c, src/qemu_conf.h: Add a
