--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Oct 15 17:35:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/driver.h, src/libvirt.c, include/libvirt/libvirt.h.in,
+	include/libvirt/libvirt.h, src/xen_unified.c, src/xend_internal.c,
+	src/xml.c, src/xml.h: Mark XML param for attach/detach APIs 'const'
+
 Mon Oct 15 15:31:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* src/test.c, include/libvirt/libvirt.h.in: Remove virDomainRestart
