--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Fri Oct 19 10:24:52 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/conf.c: documentation cleanups from Jim Meyering
+	* tests/conftest.c: Use fwrite, not printf, since the
+	  result buffer is not NUL-terminated.
+	* tests/qemuxml2argvtest.c: Initialize vm.migrateFrom[0],
+	  to avoid "read-uninitialized" error from within
+	  qemudBuildCommandLine.                   
+
 Wed Oct 17 11:27:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* libvirt.spec.in (BuildRequires): Add "qemu" (Jim Meyering).
