--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Oct 19 11:59:39 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/conf.c: fix bug on negative values in virConfParseLong()
+	  raised by Tatsuro Enokura
+
 Fri Oct 19 10:24:52 CEST 2007 Daniel Veillard <veillard@redhat.com>
 
 	* src/conf.c: documentation cleanups from Jim Meyering
