--- a/po/id.po
+++ b/po/id.po
@@ -4,7 +4,7 @@
 # $Id$
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: libvirt\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-10-23 17:38+0200\n"
 "PO-Revision-Date: 2007-09-14 04:27+0700\n"
