--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Oct 24 16:21:02 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/xml.c: applied patch from Jim Meyering fixing parseNumber
+	  to detect overflow, and also reindented the module.
+
 Wed Oct 24 10:38:38 CEST 2007 Daniel Veillard <veillard@redhat.com>
 
 	* po/id.po: Remove again bogus Project-Id-Version field from merge error
