--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Oct 26 15:40:44 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/xml.c: fix build when configured without Xen
+
 Wed Oct 24 16:21:02 CEST 2007 Daniel Veillard <veillard@redhat.com>
 
 	* src/xml.c: applied patch from Jim Meyering fixing parseNumber
