--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Nov  5 11:11:45 CET 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/xml.c: patch from Beth Kon to fix a problem when the
+	  cpuset parameter for numa uses cpu maxcpu-1
+
 Thu Nov  1 14:32:07 CET 2007 Daniel Veillard <veillard@redhat.com>
 
 	* src/xm_internal.c: patches from Masayuki Sunou to fix a problem
