--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Nov 13 15:33:35 CET 2007 Jim Meyering <meyering@redhat.com>
+
+	Make qemud's install-init rule work in a non-srcdir build.
+	* qemud/Makefile.am: In the install-init, remove an unneeded
+	$(srcdir)/ prefix.
+
 Mon Nov 12 23:11:35 CET 2007 Jim Meyering <meyering@redhat.com>
 
 	conftest: fix transposed size and count arguments to fwrite.
