--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Nov 14 17:28:31 CET 2007 Jim Meyering <meyering@redhat.com>
+
+	Handle failed strdup and malloc.
+	* src/remote_internal.c: Don't dereference NULL after
+	failed strdup or malloc in doRemoteOpen.
+
 Wed Nov 14 11:55:00 UTC 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* src/stats_linux.c, src/stats_linux.h, src_xen_internal.c:
