--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Nov 14 18:09:31 CET 2007 Daniel Veillard <veillard@redhat.com>
+
+	* doc/libvir.html doc/format.html: add missing docs for 
+	  <shareable/> on disk devices
+	* src/Makefile.am: fix the tst build rule for missing libraries
+
 Wed Nov 14 17:28:31 CET 2007 Jim Meyering <meyering@redhat.com>
 
 	Handle failed strdup and malloc.
