Remove reliance on abs_top_{src,build}dir variables from automake 1.10

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Nov 17 13:05:33 UTC 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* tests/Makefile.am: Set abs_top_{build,src}dir based on 'pwd'
+	since older automake does not provide these vars
+
 Sat Nov 17 12:10:33 UTC 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* docs/Makefile.am: Added missing news.xsl to EXTRA_DIST
